--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueCheckgroup/ueCheckgroup.directive.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueCheckgroup/ueCheckgroup.directive.scss
@@ -19,9 +19,7 @@
 
 ue-checkgroup {
   display: block;
-  margin-bottom: -14px;
-  .form-horizontal .checkbox-inline {
-    padding-top: 0;
-    padding-bottom: 14px;
+  wc-checkbox-wrapper {
+    padding-top: 14px;
   }
 }
