--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueKorkortBedomning/ueKorkortBedomning.directive.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueKorkortBedomning/ueKorkortBedomning.directive.scss
@@ -21,12 +21,12 @@ ue-korkort-bedomning {
 
   display: block;
 
-  .form-horizontal .radio-inline {
-    padding-bottom: 14px;
+  wc-checkbox-wrapper {
+    padding-top: 14px;
   }
 
-  .form-horizontal .checkbox-inline {
-    padding-bottom: 14px;
+  wc-radio-wrapper {
+    padding-top: 14px;
   }
 
   .korkortstyper {
