--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSupportPanelManager/wcFmbPanelTab/wcFmbPanelTab.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSupportPanelManager/wcFmbPanelTab/wcFmbPanelTab.directive.html
@@ -3,14 +3,16 @@
 <div class="fmb-diagnos-row" ng-class="{'has-diagnose' : !vm.noDataMessage.warning}">
   <span ng-repeat="d in fmb.diagnoses track by $index" class="fmb-diagnos-description">
 
-  <label ng-attr-for="fmb_diagnos_radio_{{d.diagnosKod}}"
-         ng-class="{'disabled' :!d.hasInfo,  'active': d === vm.activeDiagnose}">
-      <input type="radio" name="fmb-radio-selectors" ng-attr-id="fmb_diagnos_radio_{{d.diagnosKod}}"
-             ng-disabled="!d.hasInfo" ng-value="d" ng-model="vm.activeDiagnose">
-    <span uib-popover="{{!d.hasInfo ? 'Det finns inget FMB-stöd för den angivna diagnosen.' :''}}"
-          popover-trigger="mouseenter" popover-popup-delay="300" popover-append-to-body="true" popover-placement="top">{{d.diagnosBeskrivning}}</span>
-  </label>
-
+   <wc-radio-wrapper>
+        <input type="radio" name="fmb-radio-selectors" ng-attr-id="fmb_diagnos_radio_{{d.diagnosKod}}"
+               ng-disabled="!d.hasInfo" ng-value="d" ng-model="vm.activeDiagnose">
+       <label ng-attr-for="fmb_diagnos_radio_{{d.diagnosKod}}"
+              ng-class="{'disabled' :!d.hasInfo,  'active': d === vm.activeDiagnose}">
+          <span uib-popover="{{!d.hasInfo ? 'Det finns inget FMB-stöd för den angivna diagnosen.' :''}}"
+                popover-trigger="mouseenter" popover-popup-delay="300" popover-append-to-body="true"
+                popover-placement="top">{{d.diagnosBeskrivning}}</span>
+        </label>
+  </wc-radio-wrapper>
   </span>
 
 </div>
