--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/css/generic-input.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/css/generic-input.scss
@@ -17,89 +17,14 @@
  * along with this program.  If not, see <http://www.gnu.org/licenses/>.
  */
 
-/*
-Checkbox/Radio
-SMALL
-*/
 
-input[type=radio] {
-  margin-top: 3px;
-  cursor: pointer;
-}
-
-input[type=checkbox] {
-  margin-top: 3px;
-  cursor: pointer;
-}
-
-.radio {
-  cursor: pointer;
-  &.disabled {
-    color: $wc-color-09;
-    cursor: not-allowed;
+.makulera-choices {
+  textarea {
+    margin-bottom: 10px;
   }
-}
 
-.checkbox {
-  cursor: pointer;
-  &.disabled {
-    color: $wc-color-09;
-    cursor: not-allowed;
+  wc-radio-wrapper {
+    padding-bottom: 10px;
   }
-}
-
-label {
-  &.checkbox {
-    font-weight: normal;
-    margin-top: 0;
-    + label.checkbox {
-      font-weight: normal;
-      margin-top: 0;
-    }
-  }
-  &.radio {
-    font-weight: normal;
-    margin-top: 0;
-    + label.radio {
-      font-weight: normal;
-      margin-top: 0;
-    }
-  }
-}
-
-.card {
-  .checkbox {
-    padding-left: 20px;
-  }
-  .checkbox-columns {
-    margin-left: 0;
-  }
-}
-
-.checkbox input[type=checkbox] {
-  margin-left: -20px;
-}
-
-.edit-form {
-  .form-inline input[type=checkbox] {
-    margin: -1px 0 0;
-    vertical-align: middle;
-  }
-}
-
-@media screen and (min-width: 768px) {
-  .form-inline .radio input[type=radio],
-  .form-inline .checkbox input[type=checkbox] {
-    vertical-align: middle;
-  }
-}
-
-/*
-Checkbox/Radio
-BIG
-*/
-
-.makulera-choices .big-radio-label {
-  margin-top: 10px;
 }
 
