--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueDiagnos/ueDiagnos.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueDiagnos/ueDiagnos.directive.html
@@ -2,17 +2,22 @@
     <div class='col-xs-12'>
         <div class="form-group">
             <div class="bottom-padding-small"><span class="bold valjkodverk" dynamic-label key="common.sit.label.valj-version-icd-10"></span></div>
-            <label class="radio-inline big-radio-label">
-                <input type="radio" class="big-radio" id="diagnoseKodverk_ICD_10_SE" name="diagnosKodSystem" value="ICD_10_SE"
+
+            <wc-radio-wrapper>
+                <input type="radio" id="diagnoseKodverk_ICD_10_SE" name="diagnosKodSystem" value="ICD_10_SE"
                        ng-model="diagnosViewState.diagnosKodSystem" checked="checked"
                        ng-change="onChangeKodverk(); validate()">
-                <span dynamic-label key="common.sit.label.diagnoskodverk.fullstandig"></span>
-            </label>
-            <label class="radio-inline big-radio-label">
-                <input type="radio" class="big-radio" id="diagnoseKodverk_KSH_97_P" name="diagnosKodSystem" value="KSH_97_P"
+                <label for="diagnoseKodverk_ICD_10_SE">
+                    <span dynamic-label key="common.sit.label.diagnoskodverk.fullstandig"></span>
+                </label>
+            </wc-radio-wrapper>
+            <wc-radio-wrapper>
+                <input type="radio" id="diagnoseKodverk_KSH_97_P" name="diagnosKodSystem" value="KSH_97_P"
                        ng-model="diagnosViewState.diagnosKodSystem" ng-change="onChangeKodverk(); validate()">
+                <label for="diagnoseKodverk_KSH_97_P">
                 <span dynamic-label key="common.sit.label.diagnoskodverk.primarvard"></span>
-            </label>
+                </label>
+            </wc-radio-wrapper>
         </div>
     </div>
 </div>
