--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueRadiogroup/ueRadiogroup.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueRadiogroup/ueRadiogroup.directive.html
@@ -3,17 +3,18 @@
     <ue-label config="::config.label"></ue-label>
     <div class="row form-horizontal">
       <div class="{{config.htmlClass}}" data-ng-repeat="choice in ::config.choices">
-        <label class="big-radio-label radio-inline">
-          <input type="radio"
-                 ng-attr-id="{{::config.modelProp}}-{{::choice.id|ueDomIdFilter}}"
-                 name="{{::config.modelProp}}"
-                 class="big-radio"
-                 value="{{choice.id}}"
-                 ng-model="modelGetterSetter"
-                 ng-model-options="{ getterSetter: true }"
-                 ng-change="updateValidation()">
-          <span dynamic-label key="{{::choice.label}}"></span>
-        </label>
+        <wc-radio-wrapper>
+            <input type="radio"
+                   ng-attr-id="{{::config.modelProp}}-{{::choice.id|ueDomIdFilter}}"
+                   name="{{::config.modelProp}}"
+                   value="{{choice.id}}"
+                   ng-model="modelGetterSetter"
+                   ng-model-options="{ getterSetter: true }"
+                   ng-change="updateValidation()">
+          <label ng-attr-for="{{::config.modelProp}}-{{::choice.id|ueDomIdFilter}}">
+            <span dynamic-label key="{{::choice.label}}"></span>
+          </label>
+        </wc-radio-wrapper>
         <div ng-if="::config.enableHelp">
           <span wc-help-chevron help-text-key="{{::choice.helpKey}}"></span>
           <span wc-help-chevron-text help-text-key="{{::choice.helpKey}}"></span>
