--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcCheckboxWrapper/wcCheckboxWrapper.directive.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcCheckboxWrapper/wcCheckboxWrapper.directive.scss
@@ -1,10 +1,11 @@
 wc-checkbox-wrapper {
 
   display: inline-block;
-  position: relative;
   padding: 0 22px 0 22px;
 
   > .wc-checkbox {
+
+    position: relative; //make it relative so that we cant position the input relatively
 
     label {
       @extend %wc-typo-07;
@@ -16,13 +17,14 @@ wc-checkbox-wrapper {
 
     label::before, label::after {
       position: absolute;
+      top: 0;
+      left: -20px;
+      padding: 0;
       width: 20px;
       height: 20px;
-      left: 0;
-      top: 0;
-      padding: 0;
-      margin-left: -20px;
+
       border-radius: 3px;
+      text-decoration: none;
 
     }
 
@@ -31,9 +33,8 @@ wc-checkbox-wrapper {
       content: "";
 
       border: 1px solid $wc-color-23;
-      background-color: $wc-color-20;
-      box-shadow: inset 0 1px 3px 0 rgba(0, 0, 0, 0.24);
-      transition: border 0.15s ease-in-out, color 0.15s ease-in-out;
+      box-shadow: inset 0 1px 3px 0 rgba(0, 0, 0, 0.5);
+
     }
 
     //determines foreground layer of visual checkbox (and tick mark)
@@ -53,8 +54,8 @@ wc-checkbox-wrapper {
       position: absolute;
 
       //place it at same coordinates as the labels :before/:after content
-      top: 0px;
-      left: 2px;
+      top: 0;
+      left: -20px;
       width: 20px;
       height: 20px;
 
@@ -64,7 +65,6 @@ wc-checkbox-wrapper {
 
     input[type="checkbox"]:focus + label::before {
       outline: thin dotted;
-     // outline: 5px auto -webkit-focus-ring-color;
     }
 
     //The tick mark when checked
@@ -72,8 +72,8 @@ wc-checkbox-wrapper {
       padding-top: 1px;
       font-family: 'Glyphicons Halflings';
       content: "\e013";
-      color: #fff; //$wc-color-01 is pink - wrong spec?;
-      text-shadow: 1px 2px 4px rgba(0, 0, 0, 0.5);
+      color: $wc-color-00;
+      text-shadow: 0 2px 4px rgba(0, 0, 0, 0.5);
 
     }
 
@@ -87,16 +87,13 @@ wc-checkbox-wrapper {
     }
 
     input[type="checkbox"]:disabled + label::before {
-      background-color: #eeeeee;
+      background-color: $wc-color-20;
+      color: $wc-color-09;
       cursor: not-allowed;
     }
 
     &.checkbox-wc-default input[type="checkbox"]:checked + label::before {
       background-color: $wc-color-21;
-    }
-    //Positioning of the tick mark
-    &.checkbox-wc-default input[type="checkbox"]:checked + label::after {
-
     }
   }
 }
