--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcRadioWrapper/wcRadioWrapper.directive.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcRadioWrapper/wcRadioWrapper.directive.scss
@@ -1,9 +1,10 @@
 wc-radio-wrapper {
 
   display: inline-block;
-  padding: 0 22px 0 0; //22px padding to the right to give space to next component if present
+  padding: 0 22px 0 22px; //22px padding to the right to give space to next component if present
 
   > .wc-radio {
+    position: relative; //make it relative so that we cant position the input relatively
 
     label {
       @extend %wc-typo-07;
@@ -16,14 +17,13 @@ wc-radio-wrapper {
 
     label::before, label::after {
       position: absolute;
+      top: 0;
+      left: -20px;
+      padding: 0;
       width: 20px;
       height: 20px;
-      left: 0;
-      top: 0;
-      padding: 0;
-      margin-left: -20px;
+
       border-radius: 50%;
-      cursor: pointer;
     }
 
     //determines background layer of visual checkbox
@@ -31,9 +31,7 @@ wc-radio-wrapper {
       content: "";
 
       border: 1px solid $wc-color-23;
-      background-color: $wc-color-20;
       box-shadow: inset 0 1px 3px 0 rgba(0, 0, 0, 0.24);
-      transition: border 0.15s ease-in-out, color 0.15s ease-in-out;
     }
 
     //determines foreground layer of visual checkbox (and tick mark)
@@ -43,8 +41,8 @@ wc-radio-wrapper {
       border: none;
       background-color: $wc-color-21;
       box-shadow: inset 0 1px 3px 0 rgba(0, 0, 0, 0.5);
-      color: #fff; //$wc-color-01 is pink - wrong spec?;
-      text-shadow: 1px 2px 4px rgba(0, 0, 0, 0.5);
+      color: $wc-color-00;
+      text-shadow: 0 2px 4px rgba(0, 0, 0, 0.5);
     }
 
     input[type="radio"] {
@@ -52,25 +50,24 @@ wc-radio-wrapper {
       z-index: 1;
 
       margin: 0;
-      position: relative;
+      position: absolute;
 
       //place it at same coordinates as the labels :before/:after content
-      top: 4px;
-      left: 2px;
+      top: 0;
+      left: -20px;
       width: 20px;
       height: 20px;
+
       cursor: pointer;
 
     }
 
     input[type="radio"]:focus + label::before {
       outline: thin dotted;
-     // outline: 5px auto -webkit-focus-ring-color;
     }
 
     //The tick mark when checked
     input[type="radio"]:checked + label::after {
-      //font-family: 'Glyphicons Halflings';
       content: "\25cf";
       line-height: normal;
     }
@@ -83,16 +80,14 @@ wc-radio-wrapper {
     }
 
     input[type="radio"]:disabled + label::before {
-      background-color: #eeeeee;
+      background-color: $wc-color-20;
+      color: $wc-color-09;
       cursor: not-allowed;
     }
 
     &.radio-wc-default input[type="radio"]:checked + label::before {
       background-color: $wc-color-21;
     }
-    //Positioning of the tick mark
-    &.radio-wc-default input[type="radio"]:checked + label::after {
 
-    }
   }
 }
