--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/headers/wcAppHeader/wcHeaderUnit/wcChangeActiveUnitDialog.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/headers/wcAppHeader/wcHeaderUnit/wcChangeActiveUnitDialog.html
@@ -60,6 +60,6 @@
   </div>
 
   <div class="modal-footer">
-    <button type="button" class="btn btn-default" ng-click="close()">Stäng</button>
+    <button type="button" class="btn btn-default" ng-click="close()">Avbryt</button>
   </div>
 </div>
