--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcCheckboxWrapper/wcCheckboxWrapper.directive.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcCheckboxWrapper/wcCheckboxWrapper.directive.scss
@@ -34,6 +34,7 @@ wc-checkbox-wrapper {
 
       border: 1px solid $wc-color-23;
       box-shadow: inset 0 1px 3px 0 rgba(0, 0, 0, 0.5);
+      transition: all .3s;
 
     }
 
@@ -44,6 +45,7 @@ wc-checkbox-wrapper {
       border: none;
       background-color: $wc-color-21;
       box-shadow: inset 0 1px 3px 0 rgba(0, 0, 0, 0.5);
+
     }
 
     input[type="checkbox"] {
@@ -65,6 +67,7 @@ wc-checkbox-wrapper {
 
     input[type="checkbox"]:focus + label::before {
       outline: thin dotted;
+      outline-offset: 1px;
     }
 
     //The tick mark when checked
