--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcRadioWrapper/wcRadioWrapper.directive.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcRadioWrapper/wcRadioWrapper.directive.scss
@@ -32,6 +32,7 @@ wc-radio-wrapper {
 
       border: 1px solid $wc-color-23;
       box-shadow: inset 0 1px 3px 0 rgba(0, 0, 0, 0.24);
+      transition: all .3s;
     }
 
     //determines foreground layer of visual checkbox (and tick mark)
@@ -64,6 +65,7 @@ wc-radio-wrapper {
 
     input[type="radio"]:focus + label::before {
       outline: thin dotted;
+      outline-offset: 1px;
     }
 
     //The tick mark when checked
