INTYG-5339: Telefon placeholder.

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueTextfield/ueTextfield.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueTextfield/ueTextfield.directive.html
@@ -12,7 +12,8 @@
                ng-disabled="config.disabled(model)"
                ng-class="::{ 'input-{{config.size}}': config.size }"
                maxlength="{{::config.htmlMaxlength || 3500}}"
-               wc-number="{{config.numbersOnly === true}}">
+               wc-number="{{config.numbersOnly === true}}"
+               placeholder="{{config.placeholder}}">
       </div>
     </div>
   </ue-validation-wrapper>
