INTYG-5252: Uppdaterat diagnoskomponenten enligt nya krav

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueDiagnos/ueDiagnos.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueDiagnos/ueDiagnos.scss
@@ -36,10 +36,14 @@
       padding-right: 0px;
       width: 450px;
     }
+    .maxwidth {
+      max-width: 100% !important;
+      width: 100% !important;
+    }
   }
 
   .dropdown-menu {
-    max-height: 290px;
+    max-height: 350px;
     max-width: 100%;
     margin-right: 10px;
     padding: 5px 0;
