INTYG-5335: Lagt till placeholder för datumformat

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/date/wcDatePickerField/wcDatePickerField.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/date/wcDatePickerField/wcDatePickerField.directive.html
@@ -5,6 +5,7 @@
            type="text"
            class="form-control"
            ng-class="{'text-invalid': invalid}"
+           placeholder="åååå-mm-dd"
            ng-model="targetModel"
            ng-model-options="targetModelOptions"
            is-open="pickerState.isOpen"
