--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/date/wcDatePeriodField/wcDatePeriodField.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/date/wcDatePeriodField/wcDatePeriodField.directive.html
@@ -4,6 +4,7 @@
            name="{{::domId}}"
            type="text"
            class="form-control"
+           placeholder="åååå-mm-dd"
            ng-model="model[field][index].period[type]"
            is-open="pickerState.isOpen"
            maxlength="10"
@@ -18,7 +19,7 @@
            wc-date-period-field-input/>
     <span class="input-group-btn">
       <button type="button" id="{{::domId}}-toggle" class="btn btn-default" ng-click="toggleOpen($event)" ng-disabled="pickerState.isOpen">
-        <i class="glyphicon glyphicon-calendar"></i>
+        <i class="material-icons">date_range</i>
       </button>
     </span>
   </span>
