INTYG-5501: rätt ikon på alert danger och standardfont på alerts

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcAlertMessage/wcAlertMessage.directive.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcAlertMessage/wcAlertMessage.directive.scss
@@ -21,6 +21,7 @@ wc-alert-message {
   display: inline-block; /* so it is easier to see bounding box in inspector */
 
   .alert {
+    @extend %wc-typo-07;
     display: inline-block;
     vertical-align: top;
     position: relative;
