--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/wc-common.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/wc-common.scss
@@ -124,6 +124,7 @@
   @import 'utkast/unified-edit/components/ueDropdown/ueDropdown.directive.scss';
   @import 'utkast/unified-edit/components/ueFormLabel/ueFormLabel.scss';
   @import 'utkast/unified-edit/components/ueKorkortBedomning/ueKorkortBedomning.directive.scss';
+  @import 'utkast/unified-edit/components/uePrognos/uePrognos.directive.scss';
   @import 'utkast/unified-edit/components/ueRadio/ueRadio.directive.scss';
   @import 'utkast/unified-edit/components/ueRadiogroup/ueRadiogroup.directive.scss';
   @import 'utkast/unified-edit/components/ueSynskarpa/ueSynskarpa.directive.scss';
