INTYG-5601: Tagit bort ej längre använda komponenter

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueDodsorsak/ueDodsorsakMulti.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueDodsorsak/ueDodsorsakMulti.directive.html
@@ -43,5 +43,5 @@
     </tr>
   </table>
   <button type="button" ng-disabled="model[config.modelProp].length >= config.maxRows" class="btn btn-default" ng-click="addRow()"><i class="material-icons">add_circle</i> Lägg till sjukdom/skada</button>
-  <wc-field-validation field-type="dodsorsak" validations="orsakValidations"></wc-field-validation>
+  <ue-validation-list field-type="dodsorsak" validations="orsakValidations"></ue-validation-list>
 </div>
