--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueDodsorsak/ueDodsorsakRow.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueDodsorsak/ueDodsorsakRow.directive.html
@@ -45,6 +45,6 @@
     </div>
   </div>
 
-  <wc-field-validation field-type="dodsorsak" validations="orsakValidations"></wc-field-validation>
-  <wc-field-validation field-type="date" validations="dateValidations"></wc-field-validation>
+  <ue-validation-list field-type="dodsorsak" validations="orsakValidations"></ue-validation-list>
+  <ue-validation-list field-type="date" validations="dateValidations"></ue-validation-list>
 </div>
