INTYG-5611: Lagt till styling av alert för success

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcAlertMessage/wcAlertMessage.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcAlertMessage/wcAlertMessage.directive.html
@@ -4,6 +4,7 @@
     <i ng-switch-when="warning" class="material-icons">info_outline</i>
     <i ng-switch-when="sekretess" class="material-icons">security</i>
     <i ng-switch-when="danger" class="material-icons">warning</i>
+    <i ng-switch-when="success" class="material-icons">check</i>
   </div>
   <span dynamic-label key="{{alertMessageId}}" class="multiline"></span>
   <ng-transclude></ng-transclude>
