--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/css/_variables.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/css/_variables.scss
@@ -40,8 +40,10 @@ $wc-color-01: #F8BFC5;
 $wc-color-04: #9A303B;
 $wc-color-11: #DA4453;
 
+$wc-color-30: #355547;
 $wc-color-16: #4C7B67;
 $wc-color-10: #37BC9B;
+$wc-color-29: #99E5D2;
 
 $wc-color-05: #765A20;
 $wc-color-12: #F6BB42;
