INTYG-5601: Återaktiverade trasiga labels

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueDiagnos/ueDiagnos.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueDiagnos/ueDiagnos.directive.html
@@ -92,5 +92,5 @@
             </td>
         </tr>
     </table>
-    <ue-validation-list field-type="{{options.type}}" validations="diagnosValidations"></ue-validation-list>
+    <ue-validation-list field-type="{{config.type}}" validations="diagnosValidations"></ue-validation-list>
 </ng-form>
