--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueDiagnos/ueDiagnos.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueDiagnos/ueDiagnos.scss
@@ -17,35 +17,75 @@
  * along with this program.  If not, see <http://www.gnu.org/licenses/>.
  */
 
+.checkbox-wrapper {
+  margin-top: 10px;
+  margin-bottom: 20px;
+
+  .margin-right {
+    margin-right: 30px;
+    margin-left: 10px;
+  }
+  .choose-code {
+    color: $wc-color-09;
+  }
+  .padding-left {
+    padding-left: 2px;
+  }
+}
+
 .ueDiagnos {
-  .diagnos-loading
-  {
+
+  span.diagnos-text {
+    color: $wc-color-09;
+  }
+  table.margin-top {
+    margin-top: 10px;
+  }
+
+  .diagnos-loading {
     position: absolute;
     right: 9px;
     z-index: 10000;
     top: 10px;
   }
 
-  .diagnosRow {
+  .diagnos-row {
     td, th {
-      padding-right: 5px;
-      padding-bottom: 2px;
-      min-width: 60px;
+      padding-bottom: 15px;
+      min-width: 112px;
     }
-    .diagnosDescriptionColumn {
+
+    .diagnos-description-column {
       padding-right: 0px;
-      width: 450px;
+      width: 87%;
+
+      input.form-control {
+        max-width: 97%;
+        margin-left: 1.5em;
+      }
+
     }
     .maxwidth {
       max-width: 100% !important;
       width: 100% !important;
     }
+
+    .code-column {
+        width: 112px;
+
+      input.form-control {
+        width: 112px;
+        padding: 0 9px;
+      }
+    }
   }
+
 
   .dropdown-menu {
     max-height: 350px;
     max-width: 100%;
-    margin-right: 10px;
+    width: 75%;
+    margin-right: 28px;
     padding: 5px 0;
     overflow-y: auto;
     overflow-x: hidden;
@@ -78,5 +118,22 @@
       }
     }
 
+  }
+  @media (min-width: 1430px) {
+    .dropdown-menu {
+      width: 70%;
+    }
+  }
+
+  @media (max-width: 1342px) {
+    .diagnos-description-column {
+      width: 85%;
+
+      input.form-control {
+        max-width: 95%;
+        margin-left: 1.8em;
+      }
+
+    }
   }
 }
