--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/date/wcDatePickerField/wcDatePickerField.directive.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/date/wcDatePickerField/wcDatePickerField.directive.scss
@@ -42,6 +42,18 @@
     border-color: $wc-color-21;
     box-shadow: 2px 2px 4px 0 $black_12;
   }
+
+  .text-invalid, INPUT.ng-invalid-dateperiod, INPUT.ng-invalid-min-date, INPUT.ng-invalid-max-date, INPUT.ng-invalid-date  {
+    border-color: $wc-color-11;
+    &+ SPAN.input-group-btn  {
+      button {
+        border-right-color: $wc-color-11;
+        border-top-color: $wc-color-11;
+        border-bottom-color: $wc-color-11;
+      }
+    }
+  }
+
 }
 
 
